--- a/mongo/docker-compose.yml
+++ b/mongo/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
-      - "./mongo-data:/data/db"
+      - "./mongodata:/data/db"
     ports:
       - 27017:27017
 
