--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-workshop",
+  "name": "jest-common-scenarios",
   "version": "1.0.0",
   "description": "Workshop setup and examples for the whole JS/TS eco-system!",
   "main": "index.js",
