--- a/javascript/package.json
+++ b/javascript/package.json
@@ -14,9 +14,13 @@
   "author": "unicop",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "jest": "^27.4.5",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.5"
+  },
+  "dependencies": {
+    "axios": "^0.24.0"
   }
 }
