--- a/typescript/package.json
+++ b/typescript/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "jest": "^27.4.7",
+    "jest-html-reporters": "^3.0.3",
     "ts-jest": "^27.1.2",
     "ts-jest-mock": "^1.1.20",
     "typescript": "^4.5.4"
