--- a/typescript/package.json
+++ b/typescript/package.json
@@ -15,7 +15,9 @@
   "author": "unicop",
   "license": "MIT",
   "devDependencies": {
+    "@types/fb-watchman": "^2.0.1",
     "@types/jest": "^27.4.0",
+    "fb-watchman": "^2.0.1",
     "jest": "^27.4.7",
     "jest-html-reporters": "^3.0.3",
     "ts-jest": "^27.1.2",
